methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant: Boolean) {
  if (verLavant) {
    for (i <-1 to nbPas) {
      avance()
    }
  } else {
    for (i <- 1 to nbPas) {
      recule()
    }
  }
}